# NEReus

./: .gitignore  20250807-GoldStandard.xlsx  20250808-GoldStandard.xlsx  20250808-POS-GoldStandard.xlsx  20250821-NER-GoldStandard.xlsx  CLAUDE.md  LIST_v1-2.parquet  LabNotes.md  POS-LIST-test1.json  README.md  Stage1.0-extractTestInscriptionsForPOS.py  Stage1.1-PrepareGoldStandardSheet.py  Stage1.1.1-ODS-Sheet.py  Stage1.2-TestPoSTaggers.py  TODO.md  getLargeFiles.sh  main.py  pyproject.toml  tags.md
manual_eval/: POS_manual_eval.Rmd
prompts/: 20250808-Gemini-2.5-Flash.2229.json  20250808-Gemini-2.5-pro-2229-Demo.json  20250808-Sonnet-4-2229.json  Gemini 2.5 Pro System.md  Gemini 2.5 Structured Output.json
treetagger/cmd/: tagger-chunker-english  tagger-chunker-french  tagger-chunker-german  tagger-chunker-spanish  tree-tagger-albanian  tree-tagger-ancient-greek-beta  tree-tagger-ancient-greek-utf8  tree-tagger-belarusian  tree-tagger-bulgarian  tree-tagger-catalan  tree-tagger-czech  tree-tagger-danish  tree-tagger-dutch  tree-tagger-english  tree-tagger-english-bnc  tree-tagger-estonian  tree-tagger-finnish  tree-tagger-french  tree-tagger-french-spoken  tree-tagger-galician  tree-tagger-german  tree-tagger-german-spoken  tree-tagger-greek  tree-tagger-hungarian  tree-tagger-indonesian  tree-tagger-italian  tree-tagger-korean  tree-tagger-latin  tree-tagger-lithuanian  tree-tagger-middle-high-german  tree-tagger-norwegian  tree-tagger-old-french  tree-tagger-persian  tree-tagger-persian-coarse  tree-tagger-polish  tree-tagger-portuguese  tree-tagger-portuguese2  (+10 more)
