[project]
name = "latinllm-ner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "guidance>=0.2.5",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pip>=25.2",
    "pyarrow>=21.0.0",
    "rich>=14.1.0",
    "spacy>=3.8.7",
    "treetaggerwrapper>=2.3",
]
